:art: Header fixes. Changed some z indexing things, pulled up the content on mobile, tweaked a font size on the ftg subtitle.

--- a/assets/src/sass/components/_background.scss
+++ b/assets/src/sass/components/_background.scss
@@ -47,6 +47,16 @@
   }
 }
 
+.head-container {
+  margin-top: -100px;
+}
+
+@media screen and (min-width: 40em) {
+  .head-container {
+    margin-top: 0;
+  }
+}
+
 .viewport-header {
   align-items: center;
   display: flex;
